--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
+    <script src="https://kit.fontawesome.com/8ddaa3dfab.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
