--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,1 +1,2 @@
+<%= stylesheet_pack_tag 'typewriterin', media: 'all' %>
 <%= javascript_pack_tag 'typewriterin', 'data-turbolinks-trak': 'reload' %>
